# AstraPlay

./: .gitignore  CMakeLists.txt  README.md
Sources/: application.cpp  main.cpp
Sources/Forms/: application.ui
doxygen/: AstraPlay_DoxyConf  Mainpage.md
doxygen/html/: _mainpage_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  application_8cpp.html  application_8cpp__incl.map  application_8cpp__incl.md5  application_8cpp_source.html  application_8h.html  application_8h__dep__incl.map  application_8h__dep__incl.md5  application_8h__incl.map  application_8h__incl.md5  application_8h_source.html  class_application-members.html  class_application.html  class_application__coll__graph.map  class_application__coll__graph.md5  class_application__inherit__graph.map  class_application__inherit__graph.md5  class_application_a007d9f7c6e0805fdca03502a1c3d130c_cgraph.map  class_application_a007d9f7c6e0805fdca03502a1c3d130c_cgraph.md5  class_application_a014688cf487feb1bcadfd7ac6991020e_cgraph.map  class_application_a014688cf487feb1bcadfd7ac6991020e_cgraph.md5  class_application_a014688cf487feb1bcadfd7ac6991020e_icgraph.map  class_application_a014688cf487feb1bcadfd7ac6991020e_icgraph.md5  class_application_a0bc5d45b9362854fd9906876975a39e5_cgraph.map  class_application_a0bc5d45b9362854fd9906876975a39e5_cgraph.md5  class_application_a0bc5d45b9362854fd9906876975a39e5_icgraph.map  class_application_a0bc5d45b9362854fd9906876975a39e5_icgraph.md5  class_application_a111d84e502dae95518416fc9d51bfccc_icgraph.map  class_application_a111d84e502dae95518416fc9d51bfccc_icgraph.md5  class_application_a131488e42287fae3bf2c9dbc2e328d3f_cgraph.map  class_application_a131488e42287fae3bf2c9dbc2e328d3f_cgraph.md5  class_application_a131488e42287fae3bf2c9dbc2e328d3f_icgraph.map  class_application_a131488e42287fae3bf2c9dbc2e328d3f_icgraph.md5  class_application_a169e2cab0b44f421f5bf5d5848e7a472_cgraph.map  class_application_a169e2cab0b44f421f5bf5d5848e7a472_cgraph.md5  class_application_a169e2cab0b44f421f5bf5d5848e7a472_icgraph.map  class_application_a169e2cab0b44f421f5bf5d5848e7a472_icgraph.md5  class_application_a1760f918aa13d9e23884b17b6739619e_cgraph.map  (+737 more)
include/: application.h  controller.h  media_info.h  output_window.h  screen_capture.h  subtitle.h  video_downloader.h
include/mpv/: render_gl.h  stream_cb.h
resources/: application.ui  icons.qrc  resources.qrc
src/: application.cpp  application.h  controller.cpp  controller.h  main.cpp  screen_capture.h
src/func/: media_info.cpp  output_window.cpp  screen_capture.cpp  subtitle.cpp  video_downloader.cpp
src/include/: application.h  media_info.h  output_window.h  video_downloader.h
src/include/mpv/: client.h  render.h
